2003-10-07  Jerry James  <james@xemacs.org>

	* autoload.el (generate-c-file-autoloads-1): Use module-extensions
	instead of listing the extensions.  Use locate-file instead of
	explicitly trying each extension.
	* code-files.el (load): Use module-extensions instead of an
	explicit list of extensions.

2003-10-02  Steve Youngs  <youngs@xemacs.org>

	* about.el (xemacs-hackers): Remove me.
	(about-current-release-maintainers): Ditto.
	(about-url-alist): Ditto.
	(about-personal-info): Ditto.
	(about-hacker-contribution): Ditto.

2003-10-01  Steve Youngs  <youngs@xemacs.org>

	* cl-extra.el (cl-do-prettyprint): Work around a "formatting" bug
	in `report-xemacs-bug'.

2003-09-26  Steve Youngs  <youngs@xemacs.org>

	* XEmacs 21.5.16 "celeriac" is released.

2003-09-20  Ilya N. Golubev  <gin@mo.msk.ru>

	* simple.el (raw-append-message): Allow user to specify
	alternative function for displaying message.
	(redisplay-echo-area-function): New.
	(clear-message): Allow user to specify function for finishing
	message display.
	(undisplay-echo-area-function): New.

2003-09-20  James LewisMoss  <dres@lewismoss.org>

	* font-menu.el (font-menu-max-number): New variable to specify
	the maximum recieved fonts.

	* x-font-menu.el (x-reset-device-font-menus): Use new variable
	(font-menu-max-number) to list-fonts.

2002-09-20  James LewisMoss  <dres@lewismoss.org>

	* gnuserv.el (gnuserv-edit-files): fallback to gtk if x device
	fails.  Fixes problem where gnuclient fails for gtk instances when
	gnuclient was built with X configure.

2003-09-20  Mike Alexander  <mta@arbortext.com>

	* code-init.el (eol-detection-enabled-p): eval the initialization
	value.

	* code-files.el (insert-file-contents): Make sure that
	setbuffer-file-coding-system sets the eol style.

2003-09-19  Stephen J. Turnbull  <stephen@xemacs.org>

	* win32-native.el (grep-null-device): Defined in
	xemacs-base/compile.el.

	* files.el (null-device): Defined in C, remove defvar.
