@@ -1,3 +1,8 @@
+2003-10-05	Kevin Haddock	<kevinhaddock@yahoo.com>
+
+	* lisp/wid-edit.el (widget-default-create): Implemented suggested
+	char-table dispatch wrench up (No. 4).
+
 2003-10-07  Jerry James  <james@xemacs.org>
 
 	* autoload.el (generate-c-file-autoloads-1): Use module-extensions
